refactor code mirror

--- a/packages/@handlebars-ng/playground/package.json
+++ b/packages/@handlebars-ng/playground/package.json
@@ -21,7 +21,7 @@
     "dev:server": "vite",
     "dev:types": "tsc --build --watch",
     "dev:unit": "vitest --ui",
-    "dev:vitest-preview": "vitest-preview",
+    "dev:vitest-preview": "BROWSER=none vitest-preview",
     "test": "concurrently -m 1 npm:test:*",
     "test:types": "tsc --build",
     "test:unit": "vitest --run",
@@ -39,6 +39,7 @@
     "@vitest/web-worker": "0.31.1",
     "autoprefixer": "10.4.14",
     "concurrently": "8.0.1",
+    "eslint-plugin-solid": "^0.12.1",
     "jsdom": "22.1.0",
     "postcss": "8.4.24",
     "tailwindcss": "3.3.2",
