--- a/packages/@handlebars-ng/playground/package.json
+++ b/packages/@handlebars-ng/playground/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-solid": "^0.12.1",
     "jsdom": "22.1.0",
     "postcss": "8.4.24",
+    "solid-transition-group": "0.2.2",
     "tailwindcss": "3.3.2",
     "vite": "4.3.9",
     "vite-plugin-solid": "2.7.0",
