--- a/packages/@handlebars-ng/playground/tsconfig.json
+++ b/packages/@handlebars-ng/playground/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "noEmit": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
