--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lerna": "7.3.0",
     "lint-staged": "14.0.1",
     "prettier": "3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
     "typescript": "5.2.2"
   },
   "lint-staged": {
